# xell-rs

./: .gitignore  Cargo.toml  README.md  powerpc64.json
.cargo/: config.toml
.github/workflows/: ci.yml
boot/stage1/: Cargo.toml  README.md  build.rs  link.x
boot/stage1/src/: except.rs  gdb.rs  glballoc.rs  iic.rs  main.rs  panic.rs  smc.rs  startup.s  uart.rs  util.rs
shared/core_reqs/: Cargo.toml
shared/core_reqs/src/: lib.rs
shared/display/: Cargo.toml
shared/display/src/: framebuffer.rs
shared/sync/src/: lib.rs  mutex.rs
shared/xenon-cpu/: Cargo.toml
shared/xenon-cpu/src/: intrin.rs  lib.rs  time.rs
shared/xenon-enet/: Cargo.toml
shared/xenon-enet/src/: lib.rs  ring.rs
shared/xenon-soc/: Cargo.toml
shared/xenon-soc/src/: iic.rs  lib.rs  smc.rs  uart.rs
