[package]
name = "stage1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_reqs = { path = "../../shared/core_reqs" }
xenon-cpu = { path = "../../shared/xenon-cpu" }
xenon-soc = { path = "../../shared/xenon-soc" }
sync = { path = "../../shared/sync" }

atomic = "0.5.0"
buddyalloc = "0.1.5"